<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context="fr.codevallee.formation.tp12.AddUserActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ajouter_un_utilisateur"
        android:textSize="30sp"/>

    <EditText
        android:id="@+id/et_nom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/nom"
        android:textSize="20sp"
        android:inputType="text"/>

    <EditText
        android:id="@+id/et_prenom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/prenom"
        android:textSize="20sp"
        android:inputType="text"/>

    <EditText
        android:id="@+id/et_age"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/age"
        android:textSize="20sp"
        android:inputType="number"/>

    <EditText
        android:id="@+id/et_metier"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/metier"
        android:textSize="20sp"
        android:inputType="text"/>

    <Button
        android:id="@+id/button_ok"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:textSize="30sp"/>

</android.support.v7.widget.LinearLayoutCompat>
